<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/window_background">

    <com.topiichat.core.presentation.customview.ToolbarView
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:toolbarTitle="@string/new_beneficiary_title" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="0px"
        android:layout_height="0px"
        android:overScrollMode="never"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/offset24"
                android:layout_marginTop="@dimen/offset20"
                android:text="@string/new_beneficiary_description"
                android:textColor="@color/kyc_text_color" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_edit_phone_number"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginHorizontal="@dimen/offset24"
                android:layout_marginTop="@dimen/offset8">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/rounded_border_edittext"
                    android:focusable="true"
                    android:hint=""
                    android:paddingHorizontal="@dimen/text_permission_padding"
                    android:textColor="@color/titleColor"
                    tools:ignore="SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.topiichat.core.presentation.customview.SelectorTextView
                android:id="@+id/text_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/offset24"
                android:layout_marginTop="@dimen/offset12"
                app:selector_hint="@string/new_beneficiary_country_hint" />

            <com.topiichat.core.presentation.customview.SelectorTextView
                android:id="@+id/text_reception_method"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/offset24"
                android:layout_marginTop="@dimen/offset12"
                app:selector_hint="@string/new_beneficiary_reception_hint" />

            <com.topiichat.core.presentation.customview.HintEditTextView
                android:id="@+id/text_holder_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/offset24"
                android:layout_marginTop="@dimen/offset12"
                app:hint="@string/new_beneficiary_holder_name_hint" />

            <com.topiichat.core.presentation.customview.HintEditTextView
                android:id="@+id/text_account_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/offset24"
                android:layout_marginTop="@dimen/offset12"
                app:hint="@string/new_beneficiary_holder_account_number" />

            <Button
                android:id="@+id/btn_continue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/bg_button"
                android:fontFamily="@font/sfprodisplaybold"
                android:text="@string/new_beneficiary_next"
                android:textAllCaps="false"
                android:textColor="@color/whiteColor"
                android:textSize="@dimen/text_button" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>